Implement 'Valid For' Docs Column

--- a/styles.css
+++ b/styles.css
@@ -480,6 +480,10 @@
   width: 100px;
   min-width: 100px;
 }
+.tblr-doc-dur {
+  width: 100px;
+  min-width: 100px;
+}
 .tblr-doc-eta {
   width: 100px;
   min-width: 100px;
