--- a/styles.css
+++ b/styles.css
@@ -501,3 +501,18 @@
   width: 180px;
   text-align: center!important;
 }
+.form-field-error #se-stat select {
+  border: 1px solid #ff9f9f;
+  background-color: #ffdfdf;
+}
+label.form-field-error {
+    color: #ff3838;
+}
+select.form-field-error {
+    background-color: #ffdfdf;
+    border: 1px solid #ff3e3e;
+}
+select.form-field-error:focus {
+    border-color: #ff0000;
+    box-shadow: 0 0 0 0.25rem rgb(255 0 0 / 25%);
+}
