--- a/styles.css
+++ b/styles.css
@@ -505,14 +505,15 @@
   border: 1px solid #ff9f9f;
   background-color: #ffdfdf;
 }
-label.form-field-error {
+select.form-field-error + label, input.form-field-error + label {
     color: #ff3838;
 }
-select.form-field-error {
+select.form-field-error,input.form-field-error {
     background-color: #ffdfdf;
     border: 1px solid #ff3e3e;
 }
-select.form-field-error:focus {
+select.form-field-error:focus,input.form-field-error:focus {
+    background-color: #ffdfdf;
     border-color: #ff0000;
     box-shadow: 0 0 0 0.25rem rgb(255 0 0 / 25%);
 }
